tests/errors/notdefined.sbl
externals (stem)
groupings (g)
routines (r)
define stem as (g r)
